--- a/pp.ipynb
+++ b/pp.ipynb
@@ -55,8 +55,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1a83bb9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "\n",
+    "if n > 0:\n",
+    "    print(\"Positive\")\n",
+    "elif n < 0:\n",
+    "    print(\"Negative\")\n",
+    "else:\n",
+    "    print(\"Neutral\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc96fbf9",
    "metadata": {},
    "outputs": [],
    "source": []
