--- a/PyProblems.ipynb
+++ b/PyProblems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d62027fb",
    "metadata": {},
    "outputs": [
@@ -20,6 +20,8 @@
     }
    ],
    "source": [
+    "# Write a Python program which will keep adding a stream of numbers inputted by the user. The adding stops as soon as user presses q key on the keyboard\n",
+    "\n",
     "sum = 0\n",
     "while(True):\n",
     "    User = input(\"Enter Item Price\")\n",
