--- a/PyProblems.ipynb
+++ b/PyProblems.ipynb
@@ -35,8 +35,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f556ef7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "def factorial (number):\n",
+    "    if number == 0 or number == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return number * factorial(number - 1)\n",
+    "    \n",
+    "def factorialTrailingZeros(number):\n",
+    "    pass\n",
+    "if __name__ == '__main__':\n",
+    "    number = int(input(\"Enter a number\"))\n",
+    "    fac = factorial(number)\n",
+    "    print(fac)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d4ab5ef",
    "metadata": {},
    "outputs": [],
    "source": []
