--- a/PyProblems.ipynb
+++ b/PyProblems.ipynb
@@ -64,8 +64,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1d4ab5ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (2262331762.py, line 15)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 15\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"{amount} INR is equal to {amount * float{currencyDict[currency]}}{currency}\")\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Currency Convertor\n",
+    "\n",
+    "with open('currency.txt') as f:\n",
+    "    lines = f.readlines()\n",
+    "\n",
+    "currencyDict = {}\n",
+    "for line in lines:\n",
+    "    parsed = line.split(\"\\t\")\n",
+    "    currencyDict[parsed[0]] = parsed[1]\n",
+    "\n",
+    "amount = int(input(\"Enter Amount:\\n\"))\n",
+    "print(\"Enter the name of currency you want to convert this amount to? Available options:\\n\")\n",
+    "[print(item) for item in currencyDict.keys()]\n",
+    "currency = input(\"Please enter one of these values:\\n\")\n",
+    "print(f\"{amount} INR is equal to {amount * float{currencyDict[currency]}}{currency}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c87dd1d0",
    "metadata": {},
    "outputs": [],
    "source": []
