--- a/PyProblems.ipynb
+++ b/PyProblems.ipynb
@@ -64,35 +64,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "1d4ab5ef",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax. Perhaps you forgot a comma? (2262331762.py, line 15)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[6], line 15\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"{amount} INR is equal to {amount * float{currencyDict[currency]}}{currency}\")\u001b[0m\n\u001b[1;37m                                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01123"
      ]
     }
    ],
    "source": [
-    "# Currency Convertor\n",
+    "# Fibonacci Series\n",
     "\n",
-    "with open('currency.txt') as f:\n",
-    "    lines = f.readlines()\n",
+    "n = int(input(\"Enter the numbers\"))\n",
+    "a, b = 0, 1\n",
+    "for _ in range(n):\n",
+    "    print(a, end=\"\") # This prints the current value of a (the Fibonacci term).end=\" \" ensures the output stays on the same line, separated by a space.\n",
+    "    a, b = b, a + b\n",
+    "# This is the most important line: Fibonacci logic.\n",
+    "# Let’s break it down:\n",
     "\n",
-    "currencyDict = {}\n",
-    "for line in lines:\n",
-    "    parsed = line.split(\"\\t\")\n",
-    "    currencyDict[parsed[0]] = parsed[1]\n",
+    "# New a becomes the current b.\n",
     "\n",
-    "amount = int(input(\"Enter Amount:\\n\"))\n",
-    "print(\"Enter the name of currency you want to convert this amount to? Available options:\\n\")\n",
-    "[print(item) for item in currencyDict.keys()]\n",
-    "currency = input(\"Please enter one of these values:\\n\")\n",
-    "print(f\"{amount} INR is equal to {amount * float{currencyDict[currency]}}{currency}\")"
+    "# New b becomes the sum of current a and b."
    ]
   },
   {
