--- a/PyProblems.ipynb
+++ b/PyProblems.ipynb
@@ -97,6 +97,45 @@
    "execution_count": null,
    "id": "c87dd1d0",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vowels count 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the string has Vowel char or not\n",
+    "\n",
+    "n = input(\"Enter The Character\").lower()\n",
+    "vowels = 'aeiou'\n",
+    "\n",
+    "count = sum(1 for char in n if char in vowels)\n",
+    "# This is a compact Python technique using:\n",
+    "\n",
+    "# Generator Expression: (1 for char in s if char in vowels)\n",
+    "\n",
+    "# sum(...): Adds up 1 for each vowel found.\n",
+    "\n",
+    "# 👉 Let’s break this down:\n",
+    "\n",
+    "# for char in s: Goes through each character in the string s.\n",
+    "\n",
+    "# if char in vowels: Checks if the character is one of 'a', 'e', 'i', 'o', 'u'.\n",
+    "\n",
+    "# 1 for ...: If it is, it gives a 1.\n",
+    "\n",
+    "# sum(...): Adds up all the 1s, which gives the total count of vowels.\n",
+    "print(\"vowels count\", count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b87f2ea",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
