--- a/PyProblems.ipynb
+++ b/PyProblems.ipynb
@@ -133,8 +133,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9b87f2ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added 0, current total: 0\n",
+      "Added 7, current total: 7\n",
+      "Added 4, current total: 11\n",
+      "Added 1, current total: 12\n",
+      "Final Sum of digits: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sum of digits of a number\n",
+    "n = int(input(\"Enter the number: \"))\n",
+    "total = 0\n",
+    "\n",
+    "while n:\n",
+    "    digit = n % 10\n",
+    "    total += digit\n",
+    "    print(f\"Added {digit}, current total: {total}\")\n",
+    "    n //= 10\n",
+    "\n",
+    "print(\"Final Sum of digits:\", total)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fbb2eb4",
    "metadata": {},
    "outputs": [],
    "source": []
