--- a/ConditionalProblems.ipynb
+++ b/ConditionalProblems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "e25b36f1",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Child\n"
+      "Seniors\n"
      ]
     }
    ],
@@ -32,6 +32,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "72df0f87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a55b62dc",
    "metadata": {},
    "outputs": [],
    "source": []
