--- a/ConditionalProblems.ipynb
+++ b/ConditionalProblems.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e25b36f1",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Seniors\n"
+      "Adults\n"
      ]
     }
    ],
@@ -18,11 +18,11 @@
     "# Age Group Categorization\n",
     "# Classify a Person's age group: Child(<13), Teenagers(13-19), Adult(20-59), Senior(60+)\n",
     "Age = int(input(\"Enter The Age\"))\n",
-    "if Age <= 13:\n",
+    "if Age < 13:\n",
     "    print(\"Child\")\n",
-    "elif 13 <= Age <= 19:\n",
+    "elif Age < 20:\n",
     "    print(\"Teenagers\")\n",
-    "elif 20 <= Age <= 59:\n",
+    "elif Age < 60:\n",
     "    print(\"Adults\")\n",
     "else:\n",
     "    print(\"Seniors\") "
