--- a/ConditionalProblems.ipynb
+++ b/ConditionalProblems.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "55cf2e41",
+   "metadata": {},
+   "source": [
+    "1. Age Group Categorization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e25b36f1",
    "metadata": {},
    "outputs": [
@@ -15,8 +23,8 @@
     }
    ],
    "source": [
-    "# Age Group Categorization\n",
     "# Classify a Person's age group: Child(<13), Teenagers(13-19), Adult(20-59), Senior(60+)\n",
+    "\n",
     "Age = int(input(\"Enter The Age\"))\n",
     "if Age < 13:\n",
     "    print(\"Child\")\n",
@@ -29,12 +37,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "29a73fa2",
+   "metadata": {},
+   "source": [
+    "2. Movie Ticket Pricing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "72df0f87",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input(\"Enter Age\"))\n",
+    "\n",
+    "price = 12 if age > 18 else 8\n",
+    "print(price)"
+   ]
   },
   {
    "cell_type": "code",
