--- a/ConditionalProblems.ipynb
+++ b/ConditionalProblems.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "72df0f87",
    "metadata": {},
    "outputs": [
@@ -54,14 +54,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "10\n"
      ]
     }
    ],
    "source": [
     "age = int(input(\"Enter Age\"))\n",
+    "day = input(\"Enter Day\")\n",
     "\n",
     "price = 12 if age > 18 else 8\n",
+    "\n",
+    "if day == \"Wednesday\":\n",
+    "    price = price - 2\n",
+    "    \n",
     "print(price)"
    ]
   },
