--- a/ConditionalProblems.ipynb
+++ b/ConditionalProblems.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "72df0f87",
    "metadata": {},
    "outputs": [
@@ -59,6 +59,8 @@
     }
    ],
    "source": [
+    "# Movie tickets are priced based on age: 12 for adults(18 and over), 8 for children. Everyone gets a 2 discount on Wednesday\n",
+    "\n",
     "age = int(input(\"Enter Age\"))\n",
     "day = input(\"Enter Day\")\n",
     "\n",
@@ -66,7 +68,7 @@
     "\n",
     "if day == \"Wednesday\":\n",
     "    price = price - 2\n",
-    "    \n",
+    "\n",
     "print(price)"
    ]
   },
