--- a/ConditionalProblems.ipynb
+++ b/ConditionalProblems.ipynb
@@ -73,9 +73,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c8555a18",
+   "metadata": {},
+   "source": [
+    "3. Grade Calculator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "a55b62dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grade A\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = int(input(\"Enter your Grade\"))\n",
+    "\n",
+    "if score >= 101:\n",
+    "    print(\"Please verify your grade again\")\n",
+    "elif score >= 90:\n",
+    "    print(\"Grade A\")\n",
+    "elif score >= 80:\n",
+    "    print(\"Grade B\")\n",
+    "elif score >= 70:\n",
+    "    print(\"Grade C\")\n",
+    "elif score >= 60:\n",
+    "    print(\"Grade D\")\n",
+    "else:\n",
+    "    print(\"Grade F\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a55b62dc",
+   "id": "eb1e7d7a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cba41f05",
    "metadata": {},
    "outputs": [],
    "source": []
