--- a/ConditionalProblems.ipynb
+++ b/ConditionalProblems.ipynb
@@ -112,12 +112,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "904afc19",
+   "metadata": {},
+   "source": [
+    "4. Fruit Ripeness Checker"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "eb1e7d7a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ripe\n"
+     ]
+    }
+   ],
+   "source": [
+    "color = input(\"Enter color of banana\")\n",
+    "\n",
+    "if color == \"Green\":\n",
+    "    print(\"Unripe\")\n",
+    "elif color == \"Yellow\":\n",
+    "    print(\"Ripe\")\n",
+    "else:\n",
+    "    print(\"Overripe\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -125,7 +150,9 @@
    "id": "cba41f05",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "5. "
+   ]
   }
  ],
  "metadata": {
