--- a/ConditionalProblems.ipynb
+++ b/ConditionalProblems.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "eb1e7d7a",
    "metadata": {},
    "outputs": [
@@ -134,14 +134,17 @@
     }
    ],
    "source": [
-    "color = input(\"Enter color of banana\")\n",
+    "fruit = input(\"Enter Fruit Name\")\n",
+    "color = input(\"Enter fruit color\")\n",
     "\n",
-    "if color == \"Green\":\n",
-    "    print(\"Unripe\")\n",
-    "elif color == \"Yellow\":\n",
-    "    print(\"Ripe\")\n",
-    "else:\n",
-    "    print(\"Overripe\")"
+    "if fruit == \"banana\":\n",
+    "    if color == \"Green\":\n",
+    "        print(\"Unripe\")\n",
+    "    elif color == \"Yellow\":\n",
+    "        print(\"Ripe\")\n",
+    "    elif color == \"Brown\":\n",
+    "        print(\"Overripe\")\n",
+    "    "
    ]
   },
   {
