--- a/loops.ipynb
+++ b/loops.ipynb
@@ -87,8 +87,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "6fb85ef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nohtyP\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reversed String\n",
+    "\n",
+    "input_str = \"Python\"\n",
+    "reversed_str = \"\"\n",
+    "\n",
+    "for char in input_str:\n",
+    "    reversed_str = char + reversed_str\n",
+    "\n",
+    "print(reversed_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a1badb0",
    "metadata": {},
    "outputs": [],
    "source": []
