--- a/loops.ipynb
+++ b/loops.ipynb
@@ -113,8 +113,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "5a1badb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Factorial by While loop\n",
+    "\n",
+    "number = 5\n",
+    "factorial = 1\n",
+    "\n",
+    "while number > 0:\n",
+    "    factorial = factorial * number\n",
+    "    number = number - 1\n",
+    "\n",
+    "print(factorial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f50e9717",
    "metadata": {},
    "outputs": [],
    "source": []
