--- a/OOPS.ipynb
+++ b/OOPS.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "96e9a44e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class car:\n",
+    "class Car:\n",
     "    def __init__(self, brand, model):\n",
     "        self.brand = brand\n",
     "        self.model = model"
@@ -19,7 +19,9 @@
    "id": "1e88649a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_car = "
+   ]
   }
  ],
  "metadata": {
