--- a/OOPS.ipynb
+++ b/OOPS.ipynb
@@ -15,13 +15,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1e88649a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Toyota\n",
+      "Corolla\n"
+     ]
+    }
+   ],
    "source": [
-    "my_car = "
+    "my_car = Car (\"Toyota\", \"Corolla\")\n",
+    "print(my_car.brand)\n",
+    "print(my_car.model)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d64f5bfe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
