--- a/OOPS.ipynb
+++ b/OOPS.ipynb
@@ -36,8 +36,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d64f5bfe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tata\n",
+      "Safari\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_new_car = Car(\"Tata\", \"Safari\")\n",
+    "print(my_new_car.brand)\n",
+    "print(my_new_car.model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa6017c9",
    "metadata": {},
    "outputs": [],
    "source": []
