--- a/OOPS.ipynb
+++ b/OOPS.ipynb
@@ -1,13 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "37be77da",
+   "metadata": {},
+   "source": [
+    "1. Basic Class and Object"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "96e9a44e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Car:\n",
+    "class Car:                     # class\n",
     "    def __init__(self, brand, model):\n",
     "        self.brand = brand\n",
     "        self.model = model"
@@ -15,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "1e88649a",
    "metadata": {},
    "outputs": [
@@ -29,14 +37,14 @@
     }
    ],
    "source": [
-    "my_car = Car (\"Toyota\", \"Corolla\")\n",
+    "my_car = Car (\"Toyota\", \"Corolla\")        # Object\n",
     "print(my_car.brand)\n",
     "print(my_car.model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "d64f5bfe",
    "metadata": {},
    "outputs": [
@@ -50,9 +58,17 @@
     }
    ],
    "source": [
-    "my_new_car = Car(\"Tata\", \"Safari\")\n",
+    "my_new_car = Car(\"Tata\", \"Safari\")           # Object\n",
     "print(my_new_car.brand)\n",
     "print(my_new_car.model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77368771",
+   "metadata": {},
+   "source": [
+    "2. Class Method and Self"
    ]
   },
   {
@@ -61,6 +77,14 @@
    "id": "aa6017c9",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "2. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3c8f92a",
+   "metadata": {},
    "source": []
   }
  ],
