--- a/OOPS.ipynb
+++ b/OOPS.ipynb
@@ -5,12 +5,12 @@
    "id": "37be77da",
    "metadata": {},
    "source": [
-    "1. Basic Class and Object"
+    "1. Basic Class and Object, class method and self"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "96e9a44e",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,14 @@
     "class Car:                     # class\n",
     "    def __init__(self, brand, model):\n",
     "        self.brand = brand\n",
-    "        self.model = model"
+    "        self.model = model\n",
+    "    def full_name(self):\n",
+    "        return f\"{self.brand} {self.model}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "1e88649a",
    "metadata": {},
    "outputs": [
@@ -32,14 +34,16 @@
      "output_type": "stream",
      "text": [
       "Toyota\n",
-      "Corolla\n"
+      "Corolla\n",
+      "Toyota Corolla\n"
      ]
     }
    ],
    "source": [
     "my_car = Car (\"Toyota\", \"Corolla\")        # Object\n",
     "print(my_car.brand)\n",
-    "print(my_car.model)"
+    "print(my_car.model)\n",
+    "print(my_car.full_name())"
    ]
   },
   {
