--- a/OOPS.ipynb
+++ b/OOPS.ipynb
@@ -25,6 +25,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "fb1e43da",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Car' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mclass\u001b[39;00m \u001b[38;5;21;01mElectricCar\u001b[39;00m(\u001b[43mCar\u001b[49m):\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, brand, model, battery_size):\n\u001b[0;32m      3\u001b[0m         \u001b[38;5;28msuper\u001b[39m()\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m(brand, model)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'Car' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class ElectricCar(Car):\n",
+    "    def __init__(self, brand, model, battery_size):\n",
+    "        super().__init__(brand, model)\n",
+    "        self.battery_size = battery_size"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "1e88649a",
    "metadata": {},
@@ -69,10 +94,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77368771",
+   "id": "2d073589",
    "metadata": {},
    "source": [
-    "2. Class Method and Self"
+    "2. Inheritance"
    ]
   },
   {
@@ -81,9 +106,7 @@
    "id": "aa6017c9",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "2. "
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
